# control-by-face

./: .gitignore  .gitmodules  01collector.cpp  02trainer.cpp  CMakeLists.txt  README.md  collector.cpp  otameshi.cpp  predictor.cpp  trainer.cpp  training_data_raw.h  training_data_row.h
controller/: controller.cpp
misc/: fixforwin.patch
simulator/: ofApp.cpp  ofApp.h
